<?xml version="1.0"?>
<package>
    <name>mobile_robot_comms</name>
    <version>0.0.1</version>
    <description>Description</description>
    <maintainer email="maintainer@mail.com">Maintainer</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>tf</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>genmsg</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>message_filters</run_depend>
    <run_depend>tf</run_depend>

    <export>
    </export>
</package>
